--- a/style.css
+++ b/style.css
@@ -11,43 +11,53 @@ body {
   color: #ffffff;
 }
 
-.logo{
+.logo {
   color: #ffffff;
   text-decoration: none;
   font-family: 'Lato', sans-serif;
 }
 
-nav{
+nav {
   display: flex;
   padding: 15px;
   font-size: 1.2rem;
 }
 
-.wrap{
+.wrap {
   flex: 1;
 }
 
-.hero{
-  text-align: center;
+.hero {
+  /* text-align: center; */
   margin-top: 3rem;
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  padding: 0 35px;
+  /* width: 20.4em; */
+  flex-direction: column;
 }
 
-.hero h1{
+.hero h1 {
   color: #7D73FC;
   font-family: 'Lato', sans-serif;
+  text-align: center;
 }
 
-.tag{
+.tag {
   margin-top: 1rem;
   margin-bottom: 2rem;
   font-family: 'Lato', sans-serif;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .decription {
+  text-align: center;
   line-height: 1.5em;
   font-size: 20px;
-  padding: 0 35px;
+  padding: 0 20px 35px;
+  border-bottom: 1px solid #646369;
 }
 
 
