Refactor linters error

--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@ body {
   background: #191765;
   width: 23.5em;
   font-family: 'Roboto', sans-serif;
-  color: #ffffff;
+  color: #fff;
 }
 
 .logo {
-  color: #ffffff;
+  color: #fff;
   text-decoration: none;
   font-family: 'Lato', sans-serif;
 }
