--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,900;1,100&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -5,7 +7,9 @@
 }
 
 body {
-  background: #191765;
+  background-color: #191765;
+  background-image: url(/img/elipse.svg);
+  background-repeat: no-repeat;
   width: 23.5em;
   font-family: 'Roboto', sans-serif;
   color: #fff;
@@ -14,10 +18,9 @@ body {
 .logo {
   color: #fff;
   text-decoration: none;
-  font-family: 'Lato', sans-serif;
 }
 
-nav {
+header {
   display: flex;
   padding: 15px;
   font-size: 1.2rem;
@@ -38,14 +41,13 @@ nav {
 .hero h1 {
   color: #7d73fc;
   font-size: 2.2rem;
-  font-family: 'Lato', sans-serif;
+  font-weight: 700;
   text-align: center;
 }
 
 .tag {
   margin-top: 1rem;
   margin-bottom: 2rem;
-  font-family: 'Lato', sans-serif;
   font-size: 1.5rem;
   text-align: center;
 }
@@ -53,8 +55,9 @@ nav {
 .decription {
   text-align: center;
   line-height: 1.5em;
-  font-size: 20px;
+  font-size: 18px;
   padding: 0 20px 35px;
+  font-weight: 100;
   border-bottom: 1px solid #646369;
 }
 
@@ -69,7 +72,6 @@ ul li {
 .abilities {
   display: flex;
   margin: 30px 0;
-  font-family: 'Lato', sans-serif;
   font-size: 14px;
   flex-wrap: wrap;
   border-bottom: 1px solid #646369;
@@ -81,11 +83,6 @@ ul li {
   font-size: 14px;
 }
 
-.elipse {
-  position: absolute;
-  top: 10px;
-}
-
 .frameworks {
   margin-left: 50px;
   margin-right: 70px;
@@ -95,9 +92,14 @@ ul li {
   margin-top: 30px;
 }
 
-.socials {
+.socials ul {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+a {
+  color: #fff;
 }
 
 .socials i {
