--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,900;1,100&display=swap');
-
 * {
   padding: 0;
   margin: 0;
@@ -41,24 +39,24 @@ header {
 .hero h1 {
   color: #7d73fc;
   font-size: 2.2rem;
-  font-weight: 700;
   text-align: center;
 }
 
 .tag {
   margin-top: 1rem;
   margin-bottom: 2rem;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   text-align: center;
 }
 
 .decription {
   text-align: center;
   line-height: 1.5em;
+  color: #C8C8D4;
   font-size: 18px;
   padding: 0 20px 35px;
-  font-weight: 100;
   border-bottom: 1px solid #646369;
+  font-family: 'Roboto', sans-serif;
 }
 
 ul {
@@ -121,7 +119,6 @@ a {
 
 .fa-arrow-down {
   font-size: 20px;
-  font-weight: 600;
 }
 
 .recent-work h1 {
@@ -152,6 +149,7 @@ img {
 
 .proof p {
   font-size: 20px;
-  line-height: 28px;
+  line-height: 33px;
   font-weight: 300;
+  color: #c8c8d4;
 }
