--- a/style.css
+++ b/style.css
@@ -138,6 +138,10 @@ a {
   margin: auto;
 }
 
+.proof-space {
+  margin-bottom: 60px;
+}
+
 img {
   width: 100%;
   height: 100%;
@@ -175,6 +179,12 @@ img {
   background-color: #7D73FC;
   padding: 15px 15px;
   font-size: 12px;
+}
+
+.project-link:hover {
+  background-color: #fff;
+  color: #191765;
+  font-weight: 700;
 }
 
 
