Fix linters error

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ a {
   flex-wrap: wrap;
   background-image: url(/img/Ellipse\ 20.svg);
   background-repeat: no-repeat;
-  background-position: 0px 22em;
+  background-position: 0 22em;
 }
 
 .recent-work h1 {
