--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ main {
   align-items: center;
   padding: 0 35px;
   flex-direction: column;
-  background-image: url(/img/Ellipse\ 19.svg);
+  background-image: url(/img/ellipse19.svg);
   background-repeat: no-repeat;
   background-position: right;
 }
@@ -135,7 +135,7 @@ a {
 .recent-work {
   display: flex;
   flex-wrap: wrap;
-  background-image: url(/img/Ellipse\ 20.svg);
+  background-image: url(/img/ellipse20.svg);
   background-repeat: no-repeat;
   background-position: 0 22em;
 }
