--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   background-color: #191765;
-  background-image: url(/img/elipse.svg);
+  background-image: url(img/elipse.svg);
   background-repeat: no-repeat;
   font-family: 'Roboto', sans-serif;
   color: #fff;
@@ -40,7 +40,7 @@ main {
   align-items: center;
   padding: 0 35px;
   flex-direction: column;
-  background-image: url(/img/ellipse19.svg);
+  background-image: url(img/ellipse19.svg);
   background-repeat: no-repeat;
   background-position: right;
 }
@@ -135,7 +135,7 @@ a {
 .recent-work {
   display: flex;
   flex-wrap: wrap;
-  background-image: url(/img/ellipse20.svg);
+  background-image: url(img/ellipse20.svg);
   background-repeat: no-repeat;
   background-position: 0 22em;
 }
