--- a/style.css
+++ b/style.css
@@ -203,3 +203,18 @@ img {
   color: #191765;
   font-weight: 700;
 }
+
+
+input,textarea{
+  width: 330px;
+  height: 20px;
+  padding: 25px;
+}
+
+textarea{
+height: 200px;
+}
+
+.get-touch{
+  padding:10px 20px
+}
