--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ ul li {
   justify-content: center;
 }
 
+footer p {
+  text-align: center;
+}
+
 .abilities p {
   color: #7d73fc;
   font-size: 14px;
@@ -207,11 +211,11 @@ img {
 }
 
 form {
- display: flex;
- justify-content: center;
- align-items: center;
- border-bottom: 1px solid #3A3837;
- padding-bottom: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid #3a3837;
+  padding-bottom: 60px;
 }
 
 input,
@@ -224,7 +228,7 @@ textarea {
 }
 
 textarea {
-height: 200px;
+  height: 200px;
 }
 
 .btn-submit {
@@ -235,10 +239,6 @@ height: 200px;
 
 footer {
   margin-bottom: 50px;
-}
-
-footer p {
-  text-align: center;
 }
 
 .form-section {
