--- a/style.css
+++ b/style.css
@@ -304,6 +304,32 @@ footer {
   color: #fff;
 }
 
+@media only screen and (min-width: 600px) {
+  body {
+    width: 100%;
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  .recent-work {
+    width: 50%;
+    margin: 0 auto;
+    background-image: none;
+  }
+
+  img {
+    width: 100%;
+  }
+
+  .project-img {
+    width: 100%;
+    /* height: 400px; */
+    margin: 0 auto;
+  }
+}
+
 @media only screen and (min-width: 992px) {
 
   body {
