--- a/style.css
+++ b/style.css
@@ -94,13 +94,6 @@ ul {
   list-style: none;
 }
 
-.tools ul {
-  margin: 10% 0;
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  font-size: 14px;
-}
-
 form ul {
   display: flex;
   flex-direction: column;
@@ -108,6 +101,13 @@ form ul {
   padding-bottom: 60px;
   border-bottom: 1px solid #3a3837;
   align-items: center;
+}
+
+.tools ul {
+  margin: 10% 0;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  font-size: 14px;
 }
 
 .socials ul {
@@ -125,10 +125,10 @@ form ul {
   font-size: 17px;
 }
 
-.abilities ul {
+/* .abilities ul {
   margin-top: 0.7rem;
   margin-right: 1rem;
-}
+} */
 
 footer p {
   text-align: center;
@@ -344,10 +344,11 @@ footer {
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
-    background-image: url(img/circle1.svg),
-    url(img/circle2header.svg);
-    background-size: 12%;
-    background-position: 120px 170px, 1080px 460px;
+    background-image:
+          url(img/circle1.svg),
+          url(img/circle2header.svg);
+          background-size: 12%;
+          background-position: 120px 170px, 1080px 460px;
   }
 
   main {
