--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ a {
   background-position: 0 22em, right;
 }
 
-.recent-work h1 {
+.recent-work h2 {
   font-size: 2.5rem;
   color: #7d73fc;
   line-height: 52px;
@@ -211,9 +211,10 @@ img {
   height: 15em;
 }
 
-.proof h2 {
-  font-size: 28px;
-  margin: 40px 0 40px 0;
+.proof h3,
+.form-section h3 {
+  font-size: 30px;
+  margin: 1em 0.5em;
 }
 
 .proof p {
@@ -289,7 +290,7 @@ footer {
   margin-top: 4rem;
 }
 
-.form-section h1 {
+.form-section h2 {
   color: #7d73fc;
   margin-bottom: 1rem;
   font-size: 32px;
@@ -404,6 +405,16 @@ footer {
     margin-top: 4rem;
   }
 
+  .abilities ul li {
+    padding: 0.5em;
+    font-size: 20px;
+  }
+
+  .title {
+    font-size: 20px !important;
+    font-weight: 500;
+  }
+
   .socials ul li {
     padding-bottom: 45px;
     font-size: 20px;
@@ -469,9 +480,21 @@ footer {
     width: 100%;
   }
 
-  .proof h2 {
-    font-size: 28px;
+  .proof h3 {
+    font-size: 32px;
     margin: 0;
+  }
+
+  .form-section h3 {
+    margin-bottom: 1em;
+  }
+
+  .form-section p {
+    width: 60%;
+    margin: 0 auto;
+    font-size: 20px;
+    padding-bottom: 30px;
+    line-height: 30px;
   }
 
   .tools ul {
