--- a/style.css
+++ b/style.css
@@ -33,14 +33,19 @@ header {
 }
 
 #icon {
-  z-index: 5;
+  z-index: 1;
+}
+
+#menu-icon {
+  position: relative;
+  transform: translate(150px,-130px); 
 }
 
 main {
   margin-bottom: 50px;
 }
 
-.menus,
+.menus ,
 .fa-envelope {
   display: none;
 }
@@ -52,7 +57,7 @@ ul.menus.active {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #191765;
+  background: #191765; 
   justify-content: center;
   flex-direction: column;
   align-items: center;
