--- a/style.css
+++ b/style.css
@@ -24,14 +24,10 @@ body {
   padding: 0 1.5rem 1.5rem 0;
 }
 
-.navbar ul {
-  padding-top: 30px;
-}
-
 .nav-menu li {
-  padding: 10px 30px;
+  padding: 30px 30px;
   margin-top: 30px;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .bar {
@@ -46,6 +42,13 @@ body {
 
 .hamburger.active .bar:nth-child(2) {
   opacity: 0;
+}
+
+.close {
+  display: none;
+  z-index: 9999;
+  cursor: pointer;
+  font-size: 26px;
 }
 
 .hamburger.active .bar:nth-child(1) {
@@ -79,6 +82,7 @@ header {
   background: #191765;
   width: 100%;
   border-radius: 10px;
+  /* text-align: center; */
   transition: 0.3s;
   font-size: 16px;
   line-height: 300%;
@@ -88,12 +92,15 @@ header {
 .nav-item {
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .nav-menu.active {
   left: 0;
 }
+
+/* .wrap {
+  flex: 1;
+} */
 
 .fa-times {
   display: none;
@@ -102,10 +109,39 @@ header {
 #icon {
   z-index: 1;
 }
+*/
+
+/* #menu-icon {
+  position: relative;
+  transform: translate(150px,-110px);
+} */
 
 main {
   margin-bottom: 50px;
 }
+
+/* .menus ,
+.fa-envelope {
+  display: none;
+} */
+
+/* ul.menus.active {
+  display: flex;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #191765;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+} */
+
+/* ul.menus.active li {
+  padding: 20px 30px;
+  font-size: 30px;
+} */
 
 .hero {
   display: flex;
@@ -418,7 +454,6 @@ footer {
 
   .navbar {
     justify-content: space-between;
-    align-items: center;
   }
 
   .nav-menu {
@@ -460,7 +495,7 @@ footer {
 
   .menus,
   .fa-envelope {
-    display: block;
+    display: inline-flex;
   }
 
   .fa-bars {
