--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 0 1.5rem 1.5rem 0;
+  padding: 0 1rem 1rem 0;
 }
 
 .nav-menu li {
@@ -48,7 +48,7 @@ body {
   display: none;
   z-index: 9999;
   cursor: pointer;
-  font-size: 26px;
+  font-size: 40px;
 }
 
 .hamburger.active .bar:nth-child(1) {
@@ -82,11 +82,11 @@ header {
   background: #191765;
   width: 100%;
   border-radius: 10px;
-  /* text-align: center; */
   transition: 0.3s;
   font-size: 16px;
   line-height: 300%;
   height: 100vh;
+  padding-top: 80px;
 }
 
 .nav-item {
@@ -98,10 +98,6 @@ header {
   left: 0;
 }
 
-/* .wrap {
-  flex: 1;
-} */
-
 .fa-times {
   display: none;
 }
@@ -109,39 +105,10 @@ header {
 #icon {
   z-index: 1;
 }
-*/
-
-/* #menu-icon {
-  position: relative;
-  transform: translate(150px,-110px);
-} */
 
 main {
   margin-bottom: 50px;
 }
-
-/* .menus ,
-.fa-envelope {
-  display: none;
-} */
-
-/* ul.menus.active {
-  display: flex;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #191765;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-} */
-
-/* ul.menus.active li {
-  padding: 20px 30px;
-  font-size: 30px;
-} */
 
 .hero {
   display: flex;
@@ -461,6 +428,7 @@ footer {
     text-align: justify;
     height: initial;
     width: initial;
+    padding-top: initial;
   }
 
   .nav-menu li {
@@ -500,6 +468,7 @@ footer {
 
   .fa-bars {
     display: none;
+    font-size: 20px;
   }
 
   .menus li {
